--- a/package.json
+++ b/package.json
@@ -17,11 +17,16 @@
   "author": "bezkoder",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.3.5",
     "bcrypt": "^5.1.0",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "generate-password": "^1.7.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.9.1"
+  },
+  "devDependencies": {
+    "gulp-openssl-encrypt": "^0.1.3"
   }
 }
