--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "moments": "^0.0.2",
-    "mongoose": "^5.9.1"
+    "mongoose": "^5.9.1",
+    "multer": "^1.4.5-lts.1"
   }
 }
